--- a/src/app/component/profile-user/personal-information-dialog.html
+++ b/src/app/component/profile-user/personal-information-dialog.html
@@ -1,33 +1,28 @@
 <div style="width: 22vw; padding: 1em">
     <h1 mat-dialog-title>Personal Information</h1>
-    <form [formGroup]="formGroup">
+    <form>
         <div mat-dialog-content>
             <mat-form-field appearance="outline" style="width: 100%;">
                 <mat-label>Phone Number</mat-label>
-                <input matInput required [(ngModel)]="personal.phone" formControlName="phone" name="phone">
+                <input matInput required [(ngModel)]="personal.phone" name="phone">
             </mat-form-field>
             <mat-form-field appearance="outline" style="width: 100%;">
                 <mat-label>Nationality</mat-label>
-                <input matInput required [(ngModel)]="personal.nationality" formControlName="nationality"
-                    name="nationality">
+                <input matInput required [(ngModel)]="personal.nationality" name="nationality">
             </mat-form-field>
             <mat-form-field appearance="outline" style="width: 100%;">
                 <mat-label>Religion</mat-label>
-                <input matInput [(ngModel)]="personal.religion" formControlName="religion">
+                <input matInput [(ngModel)]="personal.religion" name="religion">
             </mat-form-field>
 
             <label for="married">Are you married?</label>
-            <mat-radio-group aria-label="Select an option" name="married" [(ngModel)]="personal.is_married">
-                <mat-radio-button style="margin-left: 10px;" value="1" checked="{{ personal.is_married }}"
-                    formControlName="is_married" (change)="changeGender($event)">Yes
-                    <input id="male" type="radio" value="true" name="gender" formControlName="gender"
-                        (change)="changeGender($event)">
-                    <input id="male" type="radio" value="false" name="gender" formControlName="gender"
-                        (change)="changeGender($event)">
+            <mat-radio-group [(ngModel)]="personal.is_married" name="married">
+                <mat-radio-button style="margin-left: 10px;" [value]="true" name="radio1">
+                    Yes
                 </mat-radio-button>
-                <mat-radio-button style="margin-left: 5px;" value="0" checked="{{ !personal.is_married }}"
-                    formControlName="is_married" (change)="changeGender($event)">No
+                <mat-radio-button style="margin-left: 5px;" [value]="false" name="radio2">No
                 </mat-radio-button>
+
             </mat-radio-group>
 
         </div>
@@ -36,4 +31,6 @@
             <button type="submit" mat-raised-button color="primary" (click)="updatePersonalInfo()">OK</button>
         </div>
     </form>
+
+
 </div>
