--- a/src/app/component/profile-user/profile-user.component.html
+++ b/src/app/component/profile-user/profile-user.component.html
@@ -2,10 +2,12 @@
     <div style="padding-bottom: 30px;" fxLayout="row wrap" fxLayoutGap="16px grid" *ngFor="let employee of employees">
         <div fxFlex="50%" fxFlex.sm="100%">
             <mat-card style="height: 200px;">
-                <mat-card-title style="display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
+                <mat-card-title
+                    style="display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
                     <div>Personal Information</div>
                     <button mat-icon-button (click)="editPersonalDialog()">
-                      <mat-icon style="color: white; background-color: orange; border-radius: 100%; padding: 5px;">edit</mat-icon>
+                        <mat-icon style="color: white; background-color: orange; border-radius: 100%; padding: 5px;">
+                            edit</mat-icon>
                     </button>
                 </mat-card-title>
                 <mat-card-content>
@@ -55,7 +57,7 @@
                             <td>{{ ef.phone }}</td>
                             <td>
                                 <button mat-icon-button>
-                                  <mat-icon (click)="editFamilyDialog()">edit</mat-icon>
+                                    <mat-icon (click)="FamilyDialog()">edit</mat-icon>
                                 </button>
                             </td>
                         </tr>
@@ -65,9 +67,9 @@
                             <td>N/A</td>
                             <td>
                                 <button mat-icon-button>
-                                <mat-icon style="color: rgb(45, 224, 90); " (click)="addFamilyDialog()">add_box
-                                </mat-icon>
-                            </button>
+                                    <mat-icon style="color: rgb(45, 224, 90); " (click)="FamilyDialog()">add_box
+                                    </mat-icon>
+                                </button>
                             </td>
                         </tr>
                     </table>
@@ -76,13 +78,16 @@
         </div>
         <div fxFlex="50%" fxFlex.sm="100%">
             <mat-card style="height: 148px">
-                <mat-card-title style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; ">
+                <mat-card-title
+                    style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; ">
                     <div>Bank Information</div>
                     <button mat-icon-button>
-                    <mat-icon *ngIf="employee.bank" style="color: white; background-color: orange; border-radius: 100%; padding: 5px;" (click)="editBankDialog()">edit</mat-icon>
-                    <mat-icon *ngIf="!employee.bank" style="color: rgb(45, 224, 90); " (click)="editBankDialog()">
-                        add_box</mat-icon>
-                </button>
+                        <mat-icon *ngIf="employee.bank"
+                            style="color: white; background-color: orange; border-radius: 100%; padding: 5px;"
+                            (click)="editBankDialog()">edit</mat-icon>
+                        <mat-icon *ngIf="!employee.bank" style="color: rgb(45, 224, 90); " (click)="editBankDialog()">
+                            add_box</mat-icon>
+                    </button>
                 </mat-card-title>
                 <mat-card-content>
                     <table style="width: 100%; ">
@@ -107,14 +112,18 @@
         </div>
         <div fxFlex="50%" fxFlex.sm="100%">
             <mat-card style="height: 148px;">
-                <mat-card-title style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; ">
+                <mat-card-title
+                    style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; ">
                     <div>Education Information</div>
                     <button mat-icon-button>
-                    <mat-icon *ngIf="employee.school" style="color: white; background-color: orange; border-radius: 100%; padding: 5px;" (click)="editEducationDialog()">edit
-                    </mat-icon>
-                    <mat-icon *ngIf="!employee.school" style="color: rgb(45, 224, 90); " (click)="addEducationDialog()">
-                        add_box</mat-icon>
-                </button>
+                        <mat-icon *ngIf="employee.school"
+                            style="color: white; background-color: orange; border-radius: 100%; padding: 5px;"
+                            (click)="editEducationDialog()">edit
+                        </mat-icon>
+                        <mat-icon *ngIf="!employee.school" style="color: rgb(45, 224, 90); "
+                            (click)="addEducationDialog()">
+                            add_box</mat-icon>
+                    </button>
                 </mat-card-title>
                 <mat-card-content>
                     <table style="width: 100%; ">
