--- a/src/app/component/profile-user/family-information-dialog.html
+++ b/src/app/component/profile-user/family-information-dialog.html
@@ -1,1 +1,26 @@
-<div>family</div>
+<div style="width: 22vw; padding: 1em">
+    <h1 mat-dialog-title>Family Information</h1>
+    <form>
+        <div mat-dialog-content>
+            <mat-form-field appearance="outline" style="width: 100%;">
+                <mat-label>Full Name</mat-label>
+                <input matInput required name="fullname" [(ngModel)]="families.name">
+            </mat-form-field>
+            <mat-form-field appearance="outline" style="width: 100%;">
+                <mat-label>Phone Number</mat-label>
+                <input matInput required name="phone" [(ngModel)]="families.phone">
+            </mat-form-field>
+            <mat-form-field appearance="outline" style="width: 100%" name="bankName">
+                <mat-label>Family Relationship</mat-label>
+                <mat-select disableRipple [(value)]="families.family_relationship_id">
+                    <mat-option *ngFor="let fam of families.family" value="{{fam.id}}"> {{fam.relationship}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+        <div mat-dialog-actions>
+            <button mat-button mat-dialog-close color="warn">Cancel</button>
+            <button type="submit" mat-raised-button color="primary">OK</button>
+        </div>
+    </form>
+</div>
